// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component renders the card to the UI as expected with data 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    lorem
  </h3>
  <p>
    ipsum
  </p>
</div>
`;

exports[`Card Component renders the card to the UI as expected with no data 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3 />
  <p />
</div>
`;
